force-app/main/default/objects/Milestone__c/Milestone__c.object-meta.xml
<CustomObject>
    <description>TOOLKIT - An object that represents a significant event in the project&#39;s lifespan.</description>
    <label>Milestone</label>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Milestone ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Milestones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>