force-app/main/default/objects/Milestone__c/fields/Adjusted_Target_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_Target_End_Date__c</fullName>
    <inlineHelpText>Used to mark updated Target Dates</inlineHelpText>
    <label>Adjusted Target End Date</label>
    <type>Date</type>
</CustomField>