force-app/main/default/objects/Milestone__c/fields/Asset_Initiative_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Asset_Initiative_Milestone__c</fullName>
    <description>Milestone for an Asset or a Initiative.</description>
    <inlineHelpText>Milestone for an Asset or a Initiative.</inlineHelpText>
    <label>Asset/Initiative Milestone</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Gain Stakeholder Buy-in</fullName>
            </value>
            <value>
                <fullName>Gather Requirements/ Define Scope</fullName>
            </value>
            <value>
                <fullName>Design/Draft</fullName>
            </value>
            <value>
                <fullName>Build/Develop Final Content</fullName>
            </value>
            <value>
                <fullName>Test/Validate</fullName>
            </value>
            <value>
                <fullName>Deploy/Publish</fullName>
            </value>
            <value>
                <fullName>Optimize/Maintain</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>