force-app/main/default/objects/Milestone__c/fields/Color__c.field-meta.xml
<CustomField>
    <fullName>Color__c</fullName>
    <formula>if((Planned_End_Date__c &lt; TODAY()) &amp;&amp; ( VALUE ( TEXT (Complete2__c ) ) &lt;&gt; 100), &quot;Red&quot;,
 

if((Planned_End_Date__c &lt;= TODAY()+5) &amp;&amp; ( VALUE ( TEXT (Complete2__c ) ) &lt;&gt; 100), &quot;Yellow&quot;,
 

&quot;Green&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Color</label>
    <type>Text</type>
</CustomField>