force-app/main/default/objects/Milestone__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Comments or additional information about Milestone.</description>
    <inlineHelpText>Use this comment box to indicate the variance between milestone dates. (e.g. Holidays)</inlineHelpText>
    <label>Comments</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>