force-app/main/default/objects/Milestone__c/fields/Milestone_Id__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Id__c</fullName>
    <description>Milestone Id to distinguish a milestone for an Asset/Initiative.</description>
    <displayFormat>{000}</displayFormat>
    <inlineHelpText>Milestone Id to distinguish a milestone for an Asset/Initiative.</inlineHelpText>
    <label>Milestone Id</label>
    <type>AutoNumber</type>
</CustomField>