force-app/main/default/objects/Milestone__c/fields/Milestone_Name__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Name__c</fullName>
    <description>Milestone Name</description>
    <inlineHelpText>Name/Label for this milestone.</inlineHelpText>
    <label>Milestone Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>