force-app/main/default/objects/Milestone__c/fields/Milestones__c.field-meta.xml
<CustomField>
    <fullName>Milestones__c</fullName>
    <description>Stage of Milestone.</description>
    <label>Milestone</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Preliminary Release Scope</fullName>
            </value>
            <value>
                <fullName>Requirements Definition</fullName>
            </value>
            <value>
                <fullName>Level of Effort Estimates</fullName>
            </value>
            <value>
                <fullName>Preliminary Scope Lock</fullName>
            </value>
            <value>
                <fullName>Design</fullName>
            </value>
            <value>
                <fullName>Final Scope Lock (Design Sign-off)</fullName>
            </value>
            <value>
                <fullName>Development &amp; Unit Test</fullName>
            </value>
            <value>
                <fullName>SIT</fullName>
            </value>
            <value>
                <fullName>UAT</fullName>
            </value>
            <value>
                <fullName>Deploy &amp; Train</fullName>
            </value>
            <value>
                <fullName>Optimize/Maintain</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>