force-app/main/default/objects/Milestone__c/fields/On_Target__c.field-meta.xml
<CustomField>
    <fullName>On_Target__c</fullName>
    <description>Displays a status as red, green or yellow ball.</description>
    <formula>if((Planned_End_Date__c &lt; TODAY()) &amp;&amp; ( VALUE ( TEXT (Complete2__c ) ) &lt;&gt; 100), IMAGE(&quot;/img/samples/light_red.gif&quot;, &quot;Red&quot;),
 

if((Planned_End_Date__c &lt;= TODAY()+5) &amp;&amp; ( VALUE ( TEXT (Complete2__c ) ) &lt;&gt; 100), IMAGE(&quot;/img/samples/light_yellow.gif&quot;, &quot;Yellow&quot;),
 

IMAGE(&quot;/img/samples/light_green.gif&quot;, &quot;Green&quot;)))</formula>
    <label>On Target</label>
    <type>Text</type>
</CustomField>