force-app/main/default/objects/Milestone__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Owner of this Milestone</description>
    <inlineHelpText>Owner of this Milestone</inlineHelpText>
    <label>Owner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Milestones</relationshipLabel>
    <relationshipName>Milestones</relationshipName>
    <type>Lookup</type>
</CustomField>