force-app/main/default/objects/Milestone__c/fields/Planned_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Planned_End_Date__c</fullName>
    <description>Expected or Preplanned date of completion of Milestone.</description>
    <label>Planned End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>