force-app/main/default/objects/Milestone__c/fields/Planned_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Planned_Start_Date__c</fullName>
    <description>Baseline Plan Dates. Initial load, and not editable except after a re-baseline</description>
    <inlineHelpText>Baseline Plan Dates. Initial load, and not editable except after a re-baseline</inlineHelpText>
    <label>Planned Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>