force-app/main/default/objects/Milestone__c/fields/Release__c.field-meta.xml
<CustomField>
    <fullName>Release__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Release related to this milestone.</description>
    <inlineHelpText>Release related to this milestone.</inlineHelpText>
    <label>Release</label>
    <referenceTo>Release__c</referenceTo>
    <relationshipLabel>Milestones</relationshipLabel>
    <relationshipName>Milestones</relationshipName>
    <type>Lookup</type>
</CustomField>