force-app/main/default/objects/Milestone__c/fields/Status2__c.field-meta.xml
<CustomField>
    <fullName>Status2__c</fullName>
    <formula>CASE( VALUE (TEXT ( Complete2__c )) , 
0, &#39;Not Started&#39;, 
100, &#39;Complete&#39;, 
&#39;In Progress&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>