force-app/main/default/objects/Milestone__c/recordTypes/Milestone_Asset_Initiative.recordType-meta.xml
<RecordType>
    <fullName>Milestone_Asset_Initiative</fullName>
    <active>false</active>
    <description>Milestones for Assets/Initiatives</description>
    <label>Milestone for Asset/Initiative</label>
</RecordType>