force-app/main/default/objects/Milestone__c/recordTypes/Milestone_Release.recordType-meta.xml
<RecordType>
    <fullName>Milestone_Release</fullName>
    <active>true</active>
    <description>Milestones specific to Releases.</description>
    <label>Milestone for Release</label>
</RecordType>