force-app/main/default/objects/Milestone__c/validationRules/planned_end_date.validationRule-meta.xml
<ValidationRule>
    <fullName>planned_end_date</fullName>
    <active>true</active>
    <description>planned end date should be greater than start date</description>
    <errorConditionFormula>OR(Planned_End_Date__c  &lt;  Planned_Start_Date__c , Actual_End_Date__c  &lt;  Planned_Start_Date__c )</errorConditionFormula>
    <errorMessage>Planned/Actual End Date must be greater than the Start Date.</errorMessage>
</ValidationRule>