force-app/main/default/objects/Milestone__c/validationRules/Progress_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Progress_Required</fullName>
    <active>true</active>
    <description>Progress on a milestone is mandatory</description>
    <errorConditionFormula>ISPICKVAL( Progress__c,&#39;&#39;)</errorConditionFormula>
    <errorMessage>Please select an appropriate status for this milestone.</errorMessage>
</ValidationRule>