force-app/main/default/objects/Milestone__c/validationRules/Release_Actual_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Release_Actual_End_Date</fullName>
    <active>true</active>
    <description>Release end date should not be greater than today&#39;s date</description>
    <errorConditionFormula>Actual_End_Date__c &gt; Today()</errorConditionFormula>
    <errorDisplayField>Actual_End_Date__c</errorDisplayField>
    <errorMessage>Actual End Date can&#39;t be greater than today&#39;s date.</errorMessage>
</ValidationRule>