force-app/main/default/objects/Milestone__c/validationRules/SetMilestone.validationRule-meta.xml
<ValidationRule>
    <fullName>SetMilestone</fullName>
    <active>false</active>
    <errorConditionFormula>ISPICKVAL( Asset_Initiative_Milestone__c , &#39;&#39;)</errorConditionFormula>
    <errorDisplayField>Asset_Initiative_Milestone__c</errorDisplayField>
    <errorMessage>Select an appropriate Milestone.</errorMessage>
</ValidationRule>