force-app/main/default/objects/Milestone__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Milestone_Name__c</columns>
    <columns>Planned_Start_Date__c</columns>
    <columns>Planned_End_Date__c</columns>
    <columns>Progress__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>On_Target__c</columns>
    <columns>Release__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>